5-0. form validation? Need polirovka

--- a/bitrix/templates/main/1-0projects-inner.html
+++ b/bitrix/templates/main/1-0projects-inner.html
@@ -285,41 +285,41 @@
 			<div class="row">
 				<div class="column">
 					<ul>
-						<li class="active"><a href="#">Home</a></li>
+						<li class="active"><a href="index.html">Home</a></li>
 					</ul>
 				</div>
 				<div class="column">
 					<ul>
-						<li><a href="#">Projects</a></li>
+						<li><a href="1-0projects.html">Projects</a></li>
 						<ul>
-							<li><a href="#">Interior design</a></li>
+							<li><a href="1-0projects-inner.html">Interior design</a></li>
 							<li><a href="#">Design furniture</a></li>
 						</ul>
 					</ul>
 				</div>
 				<div class="column">
 					<ul>
-						<li><a href="#">Servises</a></li>
+						<li><a href="3-0services.html">Servises</a></li>
 						<ul>
-							<li><a href="#">Mounting</a></li>
-							<li><a href="#">Manufacturing of furniture to order</a></li>
+							<li><a href="3-1services-inner.html">Mounting</a></li>
+							<li><a href="4-1designers.html">Designers</a></li>
 							<li><a href="#">interior design</a></li>
 						</ul>
 					</ul>
 				</div>
 				<div class="column">
 					<ul>
-						<li><a href="#">About</a></li>
+						<li><a href="2-0about.html">About</a></li>
 					</ul>
 				</div>
 				<div class="column">
 					<ul>
-						<li><a href="#">Designers</a></li>
+						<li><a href="4-0designers.html">Designers</a></li>
 					</ul>
 				</div>
 				<div class="column">
 					<ul>
-						<li><a href="#">contacts</a></li>
+						<li><a href="5-0contact.html">contacts</a></li>
 					</ul>
 				</div>
 			</div>
