--- a/src/jade/_menu.jade
+++ b/src/jade/_menu.jade
@@ -11,39 +11,39 @@
         .column
           ul
             li.active
-              a(href='#') Home
+              a(href='index.html') Home
         .column
           ul
             li
-              a(href='#') Projects
+              a(href='1-0projects.html') Projects
             ul
               li
-                a(href='#') Interior design
+                a(href='1-0projects-inner.html') Interior design
               li
                 a(href='#') Design furniture
         .column
           ul
             li
-              a(href='#') Servises
+              a(href='3-0services.html') Servises
             ul
               li
-                a(href='#') Mounting
+                a(href='3-1services-inner.html') Mounting
               li
-                a(href='#') Manufacturing of furniture to order
+                a(href='4-1designers.html') Designers
               li
                 a(href='#') interior design
         .column
           ul
             li
-              a(href='#') About
+              a(href='2-0about.html') About
         .column
           ul
             li
-              a(href='#') Designers
+              a(href='4-0designers.html') Designers
         .column
           ul
             li
-              a(href='#') contacts
+              a(href='5-0contact.html') contacts
     .media
       a.media-item(href='#')
         .media-item_icon
