form validation. fix designer projects slider, fix services slider

--- a/bitrix/templates/main/4-1designers.html
+++ b/bitrix/templates/main/4-1designers.html
@@ -186,12 +186,12 @@
 			<div class="project__gallery">
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/galery1.jpg" alt="">
-						<div class="item__title">Big brother is watching you</div>
+						<div class="item__title">11Big brother is watching you</div>
 					</div>
 				</div>
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/galery1.jpg" alt="">
-						<div class="item__title">Big brother is watching you</div>
+						<div class="item__title">1Big brother is watching you</div>
 					</div>
 				</div>
 				<div class="project__galery-item">
@@ -230,7 +230,7 @@
 				</div>
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/galery1.jpg" alt="">
-						<div class="item__title">Big brother is watching you</div>
+						<div class="item__title">1Big brother is watching you</div>
 					</div>
 				</div>
 				<div class="project__galery-item">
@@ -247,7 +247,7 @@
 			<div class="galery__description-wrapper">
 				<div class="galery__description">
 					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
+						<div class="link_case"><a class="link-dash">1.png</a></div>
 						<div class="link_case"> <a class="link-dash">.pdf</a></div>
 						<div class="link_case"> <a class="link-dash">.pptx</a></div>
 						<div class="link_case"> </div>
@@ -335,11 +335,11 @@
 			<div class="project__gallery">
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-					<div class="item__title">Big brother is watching you</div>
+					<div class="item__title">B2ig brother is watching you</div>
 				</div>
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-					<div class="item__title">Big brother is watching you</div>
+					<div class="item__title">22Big brother is watching you</div>
 				</div>
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/room.jpg" alt=""></div>
@@ -347,11 +347,11 @@
 				</div>
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-					<div class="item__title">Big brother is watching you</div>
+					<div class="item__title">222Big brother is watching you</div>
 				</div>
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/room.jpg" alt=""></div>
-					<div class="item__title">Big brother is watching you</div>
+					<div class="item__title">2Big brother is watching you</div>
 				</div>
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/room.jpg" alt=""></div>
@@ -373,7 +373,7 @@
 			<div class="galery__description-wrapper">
 				<div class="galery__description">
 					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png2</a></div>
+						<div class="link_case"><a class="link-dash">2.png2</a></div>
 						<div class="link_case"> <a class="link-dash">.pdf2</a></div>
 						<div class="link_case"> <a class="link-dash">.pptx2</a></div>
 						<div class="link_case"> </div>
@@ -391,37 +391,37 @@
 						<div class="link_case"> </div>
 					</div>
 					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
+						<div class="link_case"><a class="link-dash">.png2</a></div>
 						<div class="link_case"> <a class="link-dash">.pdf</a></div>
 						<div class="link_case"> <a class="link-dash">.pptx</a></div>
 						<div class="link_case"> </div>
 					</div>
 					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
+						<div class="link_case"><a class="link-dash">.png2</a></div>
 						<div class="link_case"> <a class="link-dash">.pdf</a></div>
 						<div class="link_case"> <a class="link-dash">.pptx</a></div>
 						<div class="link_case"> </div>
 					</div>
 					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
+						<div class="link_case"><a class="link-dash">.png2</a></div>
 						<div class="link_case"> <a class="link-dash">.pdf</a></div>
 						<div class="link_case"> <a class="link-dash">.pptx</a></div>
 						<div class="link_case"> </div>
 					</div>
 					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
+						<div class="link_case"><a class="link-dash">.png2</a></div>
 						<div class="link_case"> <a class="link-dash">.pdf</a></div>
 						<div class="link_case"> <a class="link-dash">.pptx</a></div>
 						<div class="link_case"> </div>
 					</div>
 					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
+						<div class="link_case"><a class="link-dash">.png2</a></div>
 						<div class="link_case"> <a class="link-dash">.pdf</a></div>
 						<div class="link_case"> <a class="link-dash">.pptx</a></div>
 						<div class="link_case"> </div>
 					</div>
 					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
+						<div class="link_case"><a class="link-dash">.png2</a></div>
 						<div class="link_case"> <a class="link-dash">.pdf</a></div>
 						<div class="link_case"> <a class="link-dash">.pptx</a></div>
 						<div class="link_case"> </div>
@@ -443,7 +443,11 @@
 			<div class="project__gallery">
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-					<div class="item__title">Big brother is watching you</div>
+					<div class="item__title">3Big brother is watching you</div>
+				</div>
+				<div class="project__galery-item">
+					<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
+					<div class="item__title">3Big brother is watching you</div>
 				</div>
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
@@ -455,19 +459,15 @@
 				</div>
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-					<div class="item__title">Big brother is watching you</div>
+					<div class="item__title">22Big brother is watching you</div>
 				</div>
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-					<div class="item__title">Big brother is watching you</div>
+					<div class="item__title">2Big brother is watching you</div>
 				</div>
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-					<div class="item__title">Big brother is watching you</div>
-				</div>
-				<div class="project__galery-item">
-					<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-					<div class="item__title">Big brother is watching you</div>
+					<div class="item__title">22Big brother is watching you</div>
 				</div>
 				<div class="project__galery-item">
 					<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
@@ -491,7 +491,55 @@
 			<div class="galery__description-wrapper">
 				<div class="galery__description">
 					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
+						<div class="link_case"><a class="link-dash">.png3</a></div>
+						<div class="link_case"> <a class="link-dash">.pdf</a></div>
+						<div class="link_case"> <a class="link-dash">.pptx</a></div>
+						<div class="link_case"> </div>
+					</div>
+					<div class="item__format">
+						<div class="link_case"><a class="link-dash">.png3</a></div>
+						<div class="link_case"> <a class="link-dash">.pdf</a></div>
+						<div class="link_case"> <a class="link-dash">.pptx</a></div>
+						<div class="link_case"> </div>
+					</div>
+					<div class="item__format">
+						<div class="link_case"><a class="link-dash">.png3</a></div>
+						<div class="link_case"> <a class="link-dash">.pdf</a></div>
+						<div class="link_case"> <a class="link-dash">.pptx</a></div>
+						<div class="link_case"> </div>
+					</div>
+					<div class="item__format">
+						<div class="link_case"><a class="link-dash">.png3</a></div>
+						<div class="link_case"> <a class="link-dash">.pdf</a></div>
+						<div class="link_case"> <a class="link-dash">.pptx</a></div>
+						<div class="link_case"> </div>
+					</div>
+					<div class="item__format">
+						<div class="link_case"><a class="link-dash">.png3</a></div>
+						<div class="link_case"> <a class="link-dash">.pdf</a></div>
+						<div class="link_case"> <a class="link-dash">.pptx</a></div>
+						<div class="link_case"> </div>
+					</div>
+					<div class="item__format">
+						<div class="link_case"><a class="link-dash">.png3</a></div>
+						<div class="link_case"> <a class="link-dash">.pdf</a></div>
+						<div class="link_case"> <a class="link-dash">.pptx</a></div>
+						<div class="link_case"> </div>
+					</div>
+					<div class="item__format">
+						<div class="link_case"><a class="link-dash">.png3</a></div>
+						<div class="link_case"> <a class="link-dash">.pdf</a></div>
+						<div class="link_case"> <a class="link-dash">.pptx</a></div>
+						<div class="link_case"> </div>
+					</div>
+					<div class="item__format">
+						<div class="link_case"><a class="link-dash">.png3</a></div>
+						<div class="link_case"> <a class="link-dash">.pdf3</a></div>
+						<div class="link_case"> <a class="link-dash">.pptx</a></div>
+						<div class="link_case"> </div>
+					</div>
+					<div class="item__format">
+						<div class="link_case"><a class="link-dash">.png3</a></div>
 						<div class="link_case"> <a class="link-dash">.pdf</a></div>
 						<div class="link_case"> <a class="link-dash">.pptx</a></div>
 						<div class="link_case"> </div>
@@ -499,55 +547,7 @@
 					<div class="item__format">
 						<div class="link_case"><a class="link-dash">.png</a></div>
 						<div class="link_case"> <a class="link-dash">.pdf</a></div>
-						<div class="link_case"> <a class="link-dash">.pptx</a></div>
-						<div class="link_case"> </div>
-					</div>
-					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
-						<div class="link_case"> <a class="link-dash">.pdf</a></div>
-						<div class="link_case"> <a class="link-dash">.pptx</a></div>
-						<div class="link_case"> </div>
-					</div>
-					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
-						<div class="link_case"> <a class="link-dash">.pdf</a></div>
-						<div class="link_case"> <a class="link-dash">.pptx</a></div>
-						<div class="link_case"> </div>
-					</div>
-					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
-						<div class="link_case"> <a class="link-dash">.pdf</a></div>
-						<div class="link_case"> <a class="link-dash">.pptx</a></div>
-						<div class="link_case"> </div>
-					</div>
-					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
-						<div class="link_case"> <a class="link-dash">.pdf</a></div>
-						<div class="link_case"> <a class="link-dash">.pptx</a></div>
-						<div class="link_case"> </div>
-					</div>
-					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
-						<div class="link_case"> <a class="link-dash">.pdf</a></div>
-						<div class="link_case"> <a class="link-dash">.pptx</a></div>
-						<div class="link_case"> </div>
-					</div>
-					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
-						<div class="link_case"> <a class="link-dash">.pdf</a></div>
-						<div class="link_case"> <a class="link-dash">.pptx</a></div>
-						<div class="link_case"> </div>
-					</div>
-					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
-						<div class="link_case"> <a class="link-dash">.pdf</a></div>
-						<div class="link_case"> <a class="link-dash">.pptx</a></div>
-						<div class="link_case"> </div>
-					</div>
-					<div class="item__format">
-						<div class="link_case"><a class="link-dash">.png</a></div>
-						<div class="link_case"> <a class="link-dash">.pdf</a></div>
-						<div class="link_case"> <a class="link-dash">.pptx</a></div>
+						<div class="link_case"> <a class="link-dash">.pptx3</a></div>
 						<div class="link_case"> </div>
 					</div>
 					<div class="item__format">
