--- a/src/jade/4-1designers.jade
+++ b/src/jade/4-1designers.jade
@@ -119,11 +119,11 @@ head
           .project__galery-item
             .item_photo
               img(src="img/projects/galery1.jpg", alt="")
-              .item__title Big brother is watching you
+              .item__title 11Big brother is watching you
           .project__galery-item
             .item_photo
               img(src="img/projects/galery1.jpg", alt="")
-              .item__title Big brother is watching you
+              .item__title 1Big brother is watching you
           .project__galery-item
             .item_photo
               img(src="img/projects/galery1.jpg", alt="")
@@ -155,7 +155,7 @@ head
           .project__galery-item
             .item_photo
               img(src="img/projects/galery1.jpg", alt="")
-              .item__title Big brother is watching you
+              .item__title 1Big brother is watching you
 
           .project__galery-item
             .item_photo
@@ -169,7 +169,7 @@ head
           .galery__description
             .item__format
               .link_case
-                a.link-dash .png
+                a.link-dash 1.png
               .link_case  
                 a.link-dash .pdf
               .link_case  
@@ -279,11 +279,11 @@ head
           .project__galery-item
             .item_photo
               img(src="img/projects/galery1.jpg", alt="")
-            .item__title Big brother is watching you
+            .item__title B2ig brother is watching you
           .project__galery-item
             .item_photo
               img(src="img/projects/galery1.jpg", alt="")
-            .item__title Big brother is watching you
+            .item__title 22Big brother is watching you
           .project__galery-item
             .item_photo
               img(src="img/projects/room.jpg", alt="")
@@ -291,11 +291,11 @@ head
           .project__galery-item
             .item_photo
               img(src="img/projects/galery1.jpg", alt="")
-            .item__title Big brother is watching you
+            .item__title 222Big brother is watching you
           .project__galery-item
             .item_photo
               img(src="img/projects/room.jpg", alt="")
-            .item__title Big brother is watching you
+            .item__title 2Big brother is watching you
           .project__galery-item
             .item_photo
               img(src="img/projects/room.jpg", alt="")
@@ -316,7 +316,7 @@ head
           .galery__description
             .item__format
               .link_case
-                a.link-dash .png2
+                a.link-dash 2.png2
               .link_case  
                 a.link-dash .pdf2
               .link_case  
@@ -340,7 +340,7 @@ head
               .link_case  
             .item__format
               .link_case
-                a.link-dash .png
+                a.link-dash .png2
               .link_case  
                 a.link-dash .pdf
               .link_case  
@@ -348,7 +348,7 @@ head
               .link_case  
             .item__format
               .link_case
-                a.link-dash .png
+                a.link-dash .png2
               .link_case  
                 a.link-dash .pdf
               .link_case  
@@ -356,7 +356,7 @@ head
               .link_case  
             .item__format
               .link_case
-                a.link-dash .png
+                a.link-dash .png2
               .link_case  
                 a.link-dash .pdf
               .link_case  
@@ -364,7 +364,7 @@ head
               .link_case  
             .item__format
               .link_case
-                a.link-dash .png
+                a.link-dash .png2
               .link_case  
                 a.link-dash .pdf
               .link_case  
@@ -372,7 +372,7 @@ head
               .link_case  
             .item__format
               .link_case
-                a.link-dash .png
+                a.link-dash .png2
               .link_case  
                 a.link-dash .pdf
               .link_case  
@@ -380,7 +380,7 @@ head
               .link_case  
             .item__format
               .link_case
-                a.link-dash .png
+                a.link-dash .png2
               .link_case  
                 a.link-dash .pdf
               .link_case  
@@ -401,7 +401,11 @@ head
           .project__galery-item
             .item_photo
               img(src="img/projects/galery1.jpg", alt="")
-            .item__title Big brother is watching you
+            .item__title 3Big brother is watching you
+          .project__galery-item
+            .item_photo
+              img(src="img/projects/galery1.jpg", alt="")
+            .item__title 3Big brother is watching you
           .project__galery-item
             .item_photo
               img(src="img/projects/galery1.jpg", alt="")
@@ -413,19 +417,15 @@ head
           .project__galery-item
             .item_photo
               img(src="img/projects/galery1.jpg", alt="")
-            .item__title Big brother is watching you
+            .item__title 22Big brother is watching you
           .project__galery-item
             .item_photo
               img(src="img/projects/galery1.jpg", alt="")
-            .item__title Big brother is watching you
+            .item__title 2Big brother is watching you
           .project__galery-item
             .item_photo
               img(src="img/projects/galery1.jpg", alt="")
-            .item__title Big brother is watching you
-          .project__galery-item
-            .item_photo
-              img(src="img/projects/galery1.jpg", alt="")
-            .item__title Big brother is watching you
+            .item__title 22Big brother is watching you
           .project__galery-item
             .item_photo
               img(src="img/projects/galery1.jpg", alt="")
@@ -449,7 +449,71 @@ head
           .galery__description
             .item__format
               .link_case
-                a.link-dash .png
+                a.link-dash .png3
+              .link_case  
+                a.link-dash .pdf
+              .link_case  
+                a.link-dash .pptx
+              .link_case  
+            .item__format
+              .link_case
+                a.link-dash .png3
+              .link_case  
+                a.link-dash .pdf
+              .link_case  
+                a.link-dash .pptx
+              .link_case  
+            .item__format
+              .link_case
+                a.link-dash .png3
+              .link_case  
+                a.link-dash .pdf
+              .link_case  
+                a.link-dash .pptx
+              .link_case  
+            .item__format
+              .link_case
+                a.link-dash .png3
+              .link_case  
+                a.link-dash .pdf
+              .link_case  
+                a.link-dash .pptx
+              .link_case  
+            .item__format
+              .link_case
+                a.link-dash .png3
+              .link_case  
+                a.link-dash .pdf
+              .link_case  
+                a.link-dash .pptx
+              .link_case  
+            .item__format
+              .link_case
+                a.link-dash .png3
+              .link_case  
+                a.link-dash .pdf
+              .link_case  
+                a.link-dash .pptx
+              .link_case  
+            .item__format
+              .link_case
+                a.link-dash .png3
+              .link_case  
+                a.link-dash .pdf
+              .link_case  
+                a.link-dash .pptx
+              .link_case  
+            .item__format
+              .link_case
+                a.link-dash .png3
+              .link_case  
+                a.link-dash .pdf3
+              .link_case  
+                a.link-dash .pptx
+              .link_case  
+            .item__format
+              .link_case
+                a.link-dash .png3
               .link_case  
                 a.link-dash .pdf
               .link_case  
@@ -461,71 +525,7 @@ head
               .link_case  
                 a.link-dash .pdf
               .link_case  
-                a.link-dash .pptx
-              .link_case  
-            .item__format
-              .link_case
-                a.link-dash .png
-              .link_case  
-                a.link-dash .pdf
-              .link_case  
-                a.link-dash .pptx
-              .link_case  
-            .item__format
-              .link_case
-                a.link-dash .png
-              .link_case  
-                a.link-dash .pdf
-              .link_case  
-                a.link-dash .pptx
-              .link_case  
-            .item__format
-              .link_case
-                a.link-dash .png
-              .link_case  
-                a.link-dash .pdf
-              .link_case  
-                a.link-dash .pptx
-              .link_case  
-            .item__format
-              .link_case
-                a.link-dash .png
-              .link_case  
-                a.link-dash .pdf
-              .link_case  
-                a.link-dash .pptx
-              .link_case  
-            .item__format
-              .link_case
-                a.link-dash .png
-              .link_case  
-                a.link-dash .pdf
-              .link_case  
-                a.link-dash .pptx
-              .link_case  
-            .item__format
-              .link_case
-                a.link-dash .png
-              .link_case  
-                a.link-dash .pdf
-              .link_case  
-                a.link-dash .pptx
-              .link_case  
-            .item__format
-              .link_case
-                a.link-dash .png
-              .link_case  
-                a.link-dash .pdf
-              .link_case  
-                a.link-dash .pptx
-              .link_case  
-            .item__format
-              .link_case
-                a.link-dash .png
-              .link_case  
-                a.link-dash .pdf
-              .link_case  
-                a.link-dash .pptx
+                a.link-dash .pptx3
               .link_case  
             .item__format
               .link_case
