--- a/src/jade/5-0contact.jade
+++ b/src/jade/5-0contact.jade
@@ -48,12 +48,16 @@ head
                 |to write us?
           .contact__block
             .contact__block-form
-              form(action='', method='get', name='form-contact')
-                  input.form__input#form_name(type='text', required)
+              form(action='/message', method='post', name='form-contact')
+                .input__wrapper
+                  input.form__input#form_name(type='text', required='required',data-validation="length", data-validation-length="min2")
                   label.parallax.label__name(for='form_name',data-speed='5') name
-                  input.form__input#form_mail(type='email',required)
+                .input__wrapper
+                  input.form__input#form_mail(type='email',required='required',data-validation="email")
                   label.parallax.label__mail(for='form_mail',data-speed='5') E-mail
-                  textarea.form__input#form_msg(type='textarea',required)
+                .input__wrapper
+                  .wrapper-textarea
+                    textarea.form__input#form_msg(type='textarea',rows='3',required='required',data-validation="length", data-validation-length="min10")
                   label.parallax.label__msg(for='form_msg',data-speed='5') message
                   button.form__button(type='submit') send
                     .icon
